--- a/healthy_web/src/main/webapp/pages/report_member.html
+++ b/healthy_web/src/main/webapp/pages/report_member.html
@@ -36,7 +36,7 @@
 <!-- 引入组件库 -->
 <script src="../js/vue.js"></script>
 <script src="../js/axios-0.18.0.js"></script>
-<script src="../plugins/echars/echarts.js"></script>
+<script src="../plugins/echarts/echarts.js"></script>
 <script type="text/javascript">
 
 
